--- a/WebContent/WEB-INF/commandList.properties
+++ b/WebContent/WEB-INF/commandList.properties
@@ -1,2 +1,9 @@
 meLogin=Control.meLoginController
 meSignup=Control.meSignupController
+meDelete=Control.meDeleteController
+meList=Control.meListController
+boWriter=Control.boWriterController
+boList=Contol.boListController
+boSelect=Contol.boSelectController
+boUpdate=Contol.boUpdateController
+boUpdateFrom=boUpdateFromController
