--- a/WebContent/WEB-INF/commandList.properties
+++ b/WebContent/WEB-INF/commandList.properties
@@ -1,9 +1,13 @@
-meLogin=Control.meLoginController
-meSignup=Control.meSignupController
-meDelete=Control.meDeleteController
-meList=Control.meListController
-boWriter=Control.boWriterController
-boList=Contol.boListController
-boSelect=Contol.boSelectController
-boUpdate=Contol.boUpdateController
-boUpdateFrom=boUpdateFromController
+meLogin=Control.member.meLoginController
+meLogout=Control.member.meLogoutController
+meLoginForm=Control.member.meLoginFormController
+meSignup=Control.member.meSignupController
+meSignupForm=Control.member.meSignupFormController
+meDelete=Control.member.meDeleteController
+meList=Control.member.meListController
+meMypage=Control.member.meMypageController
+boWriter=Control.board.boWriteController
+boList=Control.board.boListController
+boSelect=Control.board.boSelectController
+boUpdate=Control.board.boUpdateController
+boUpdateFrom=Control.board.boUpdateFromController
