--- a/WebContent/WEB-INF/commandList.properties
+++ b/WebContent/WEB-INF/commandList.properties
@@ -1,4 +1,5 @@
 meLogin=Control.member.meLoginController
+meIDcheck=Control.member.meIDcheckController
 meLogout=Control.member.meLogoutController
 meLoginForm=Control.member.meLoginFormController
 meSignup=Control.member.meSignupController
