--- a/WebContent/WEB-INF/commandList.properties
+++ b/WebContent/WEB-INF/commandList.properties
@@ -1,5 +1,5 @@
 meLogin=Control.member.meLoginController
-meIDcheck=Control.member.meIDcheckController
+meOverlapcheck=Control.member.meOverlapcheckController
 meLogout=Control.member.meLogoutController
 meLoginForm=Control.member.meLoginFormController
 meSignup=Control.member.meSignupController
