--- a/WebContent/WEB-INF/commandList.properties
+++ b/WebContent/WEB-INF/commandList.properties
@@ -7,6 +7,7 @@ meSignupForm=Control.member.meSignupFormController
 meDelete=Control.member.meDeleteController
 meList=Control.member.meListController
 meMypage=Control.member.meMypageController
+meDetailView=Control.member.meDetailViewController
 boWriter=Control.board.boWriteController
 boList=Control.board.boListController
 boSelect=Control.board.boSelectController
