수업한 내용까지 수정 부탁드립니다

--- a/WebContent/WEB-INF/commandList.properties
+++ b/WebContent/WEB-INF/commandList.properties
@@ -1,15 +1,40 @@
+#######member#######################################
 meLogin=Control.member.meLoginController
-meOverlapcheck=Control.member.meOverlapcheckController
-meLogout=Control.member.meLogoutController
 meLoginForm=Control.member.meLoginFormController
+meLogout=Control.member.meLogoutController
+meOverlapcheck=Control.member.meOverlapcheckController
 meSignup=Control.member.meSignupController
 meSignupForm=Control.member.meSignupFormController
 meDelete=Control.member.meDeleteController
 meList=Control.member.meListController
 meMypage=Control.member.meMypageController
+meUpdateFrom=Control.member.meUpdateFromController
+meUpdate=Control.member.meUpdateController
 meDetailView=Control.member.meDetailViewController
-boWriter=Control.board.boWriteController
+meInsertHistory=Control.member.meInsertHistoryController
+meInsertHistoryFrom=Control.member.meInsertHistoryFromController
+
+#######board#######################################
 boList=Control.board.boListController
-boSelect=Control.board.boSelectController
+boInsert=Control.board.boInsertController
+boInsertForm=Control.board.boInsertFormController
+boDetailView=Control.board.boDetailViewController
 boUpdate=Control.board.boUpdateController
-boUpdateFrom=Control.board.boUpdateFromController
+boUpdateForm=Control.board.boUpdateFormController
+boReply=Control.board.boReplyController
+boReplyForm=Control.board.boReplyFormController
+
+#######mountain#######################################
+moList=Control.mountain.moListController
+moInsert=Control.mountain.moInsertController
+moInsertForm=Control.mountain.moInsertFormController
+moUpdate=Control.mountain.moUpdateController
+moUpdateForm=Control.mountain.moUpdateFormController
+moDetailView=Control.mountain.moDetailViewController
+
+#######title#######################################
+tiList=Control.title.tiListController
+tiInsert=Control.title.tiInsertController
+tiInsertForm=Control.title.tiInsertFormController
+tiUpdate=Control.title.tiUpdateController
+tiUpdateForm=Control.title.tiUpdateFormController
