--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
 	<display-name>WebProject</display-name>
 	<welcome-file-list>
-		<welcome-file>/View/Main.jsp</welcome-file>
+		<welcome-file>/View/index.jsp</welcome-file>
 	</welcome-file-list>
 
 	<session-config>
