ppt 수정 테이블 생성 메모장 변경 커맨드 리스트에 history 커맨드들 추가 history컨트롤러 추가

--- a/WebContent/WEB-INF/commandList.properties
+++ b/WebContent/WEB-INF/commandList.properties
@@ -38,3 +38,10 @@ tiInsert=Control.title.tiInsertController
 tiInsertForm=Control.title.tiInsertFormController
 tiUpdate=Control.title.tiUpdateController
 tiUpdateForm=Control.title.tiUpdateFormController
+
+#######history#######################################
+hiList=Control.history.hiListController
+hiInsert=Control.history.hiInsertController
+hiInsertForm=Control.history.hiInsertFormController
+hiUpdate=Control.history.hiUpdateController
+hiUpdateForm=Control.history.hiUpdateFormController
