회원가입 팝오버로 수정 댓글 및 댓글 패이징 완료 답글 어떻게 해야할까 게시글 삭제 완료 스크롤 메뉴 추가

--- a/WebContent/WEB-INF/commandList.properties
+++ b/WebContent/WEB-INF/commandList.properties
@@ -21,8 +21,11 @@ boInsertForm=Control.board.boInsertFormController
 boDetailView=Control.board.boDetailViewController
 boUpdate=Control.board.boUpdateController
 boUpdateForm=Control.board.boUpdateFormController
+boReplyInsert=Control.board.boReplyInsertController
 boReply=Control.board.boReplyController
-boReplyForm=Control.board.boReplyFormController
+boDepthInsertForm=Control.board.boDepthInsertFormController
+boDepthInsert=Control.board.boDepthInsertController
+boDelete=Control.board.boDeleteController
 
 #######mountain#######################################
 moList=Control.mountain.moListController
