이것저것 다 손댐

--- a/WebContent/WEB-INF/commandList.properties
+++ b/WebContent/WEB-INF/commandList.properties
@@ -16,6 +16,8 @@ meInsertHistoryForm=Control.member.meInsertHistoryFormController
 
 #######board#######################################
 boList=Control.board.boListController
+boMyList=Control.board.boMyListController
+boMyReplyList=Control.board.boMyReplyListController
 boInsert=Control.board.boInsertController
 boInsertForm=Control.board.boInsertFormController
 boDetailView=Control.board.boDetailViewController
@@ -27,12 +29,14 @@ boDepthInsert=Control.board.boDepthInsertController
 boDelete=Control.board.boDeleteController
 
 #######mountain#######################################
+moMain=Control.mountain.moMainController
 moList=Control.mountain.moListController
 moInsert=Control.mountain.moInsertController
 moInsertForm=Control.mountain.moInsertFormController
 moUpdate=Control.mountain.moUpdateController
 moUpdateForm=Control.mountain.moUpdateFormController
 moDetailView=Control.mountain.moDetailViewController
+moAdminList=Control.mountain.moAdminListController
 
 #######title#######################################
 tiList=Control.title.tiListController
