타이틀 수정/삭제 완료

--- a/WebContent/WEB-INF/commandList.properties
+++ b/WebContent/WEB-INF/commandList.properties
@@ -44,6 +44,7 @@ tiInsert=Control.title.tiInsertController
 tiInsertForm=Control.title.tiInsertFormController
 tiUpdate=Control.title.tiUpdateController
 tiUpdateForm=Control.title.tiUpdateFormController
+tiDelete=Control.title.tiDeleteController
 
 #######history#######################################
 hiList=Control.history.hiListController
